# Projeto-Haskell

./: .dockerignore  .gitignore  Dockerfile  LEIAME.md  MODELO_DE_NEGOCIO.md  ReadMe.md  plantdiary.cabal  render.yaml
app/: Main.hs
src/: Auth.hs  Models.hs  Routes.hs  Views.hs
